--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,11 @@ dependencies:
   font_awesome_flutter: ^10.7.0
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_chat_ui: ^1.6.13
 
 dev_dependencies:
   flutter_test:
